feat: implement authentication into frontend
