# backend/docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/book": {
+        "/api/book": {
             "post": {
                 "description": "Add a book into the database",
                 "produces": [
@@ -46,7 +46,7 @@
                 }
             }
         },
-        "/book/{id}": {
+        "/api/book/{id}": {
             "delete": {
                 "description": "Deletes a book based on the given ID",
                 "produces": [
@@ -123,7 +123,7 @@
                 }
             }
         },
-        "/books": {
+        "/api/books": {
             "get": {
                 "description": "Get a list of all books in the system",
                 "produces": [
@@ -152,27 +152,7 @@
                 }
             }
         },
-        "/health": {
-            "get": {
-                "description": "Get the health status of the API",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "health"
-                ],
-                "summary": "Health check endpoint",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Health"
-                        }
-                    }
-                }
-            }
-        },
-        "/login": {
+        "/api/login": {
             "post": {
                 "description": "Authenticate user and return JWT token",
                 "produces": [
@@ -219,6 +199,26 @@
                         "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/health": {
+            "get": {
+                "description": "Get the health status of the API",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "health"
+                ],
+                "summary": "Health check endpoint",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Health"
                         }
                     }
                 }
